Fixing dark mode italics color bug

--- a/src/main.scss
+++ b/src/main.scss
@@ -40,6 +40,7 @@ body {
     p,
     a,
     li,
+    i,
     label,
     input,
     button {
@@ -68,6 +69,7 @@ body {
     p,
     a,
     li,
+    i,
     label,
     input,
     button {
